--- a/META/backend/requirements.txt
+++ b/META/backend/requirements.txt
@@ -1,1 +1,9 @@
-Django==5.0.2
+Django==4.2.4
+django-redis==5.4.0
+django-comment-migrate==0.1.7
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
+django-cors-headers==4.3.1
+pillow==10.2.0
+PyMySQL==1.1.0
+cryptography==41.0.3
