--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,11 @@ services:
     container_name: backend
     volumes:
       - ./src/backend:/backend
+      - ${BACKEND_DATA_PATH}:${BACKEND_INNER_PATH}
     ports:
       - ${BACKEND_PORT}:${BACKEND_PORT}
+    depends_on:
+      - db
     command: python3 manage.py runserver 0.0.0.0:${BACKEND_PORT}
     env_file:
       - .env
@@ -16,21 +19,21 @@ services:
       template_network:
         ipv4_address: ${BACKEND_IP}
 
-  frontend:
-    build:
-      context: .
-      dockerfile: .\META\frontWeb\Dockerfile
-    container_name: frontend
-    volumes:
-      - ./src/clientWeb:/web
-    ports:
-      - ${FRONT_WEB_PORT}:${FRONT_WEB_PORT}
-    command: sh start_up.sh
-    env_file:
-      - .env
-    networks:
-      template_network:
-        ipv4_address: ${FRONTEND_IP}
+  # frontend:
+  #   build:
+  #     context: .
+  #     dockerfile: .\META\frontWeb\Dockerfile
+  #   container_name: frontend
+  #   volumes:
+  #     - ./src/clientWeb:/web
+  #   ports:
+  #     - ${FRONT_WEB_PORT}:${FRONT_WEB_PORT}
+  #   command: sh start_up.sh
+  #   env_file:
+  #     - .env
+  #   networks:
+  #     template_network:
+  #       ipv4_address: ${FRONTEND_IP}
 
   front_mb:
     build:
@@ -48,23 +51,42 @@ services:
       template_network:
         ipv4_address: ${FRONTMB_IP}
 
-  postgres:
-    image: postgres:16.2
-    container_name: db
+  db:
+    image: mysql:8.0
     restart: always
-    shm_size: 256mb
+    container_name: db
     volumes:
-      - ${DB_DATA_PATH}:/var/lib/postgresql/data
+      - ${DB_DATA_PATH}:/var/lib/mysql
+      - ./META/DB/my.cnf:/etc/my.cnf
     ports:
-      - ${DB_PORT}:${DB_PORT}
-    environment:
-      - POSTGRES_PASSEORD=${DB_PASSWORD}
-      - POSTGRES_PASSWORD=password
+      - "${DB_PORT}:${DB_PORT}"
     env_file:
-      - .env
+      - ./.env
+    environment:
+      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
     networks:
       template_network:
         ipv4_address: ${DB_IP}
+      
+  redis:
+    build:
+      context: .
+      dockerfile: ./META/redis/Dockerfile
+    restart: always
+    privileged: true
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./META/redis/redis.conf:/etc/redis/redis.conf:ro
+      - ${REDIS_DATA_PATH}/redis/data:/data
+      - ${REDIS_DATA_PATH}/redis/logs:/logs
+    container_name: redis
+    command: redis-server /etc/redis/redis.conf
+    env_file:
+      ./.env
+    networks:
+      template_network:
+        ipv4_address: ${REDIS_IP}
 
 networks:
   template_network:
