--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       - ${BACKEND_PORT}:${BACKEND_PORT}
     depends_on:
       - db
-    command: python3 manage.py runserver 0.0.0.0:${BACKEND_PORT}
+    command: python3 setup.py
     env_file:
       - .env
     networks:
