图片下载功能更新

--- a/.env_example
+++ b/.env_example
@@ -11,12 +11,23 @@ REDIS_IP=${BASE_IP}.0.0.6
 BACKEND_PORT=8000
 FRONT_WEB_PORT=8001
 FRONT_MB_PORT=8002
-DB_PORT=5432 # 数据库端口,只影响后台读取，不影响数据库部署
+DEV_FRONT_CODE_PORT=8003
+DB_PORT=3306 # 数据库端口,只影响后台读取，不影响数据库部署
+DB_NAME=mainapp
+BACKEND_INNER_PATH=/prj_data
+BACKEND_LOG_PATH=${BACKEND_INNER_PATH}/logs
+BACKEND_MEDIA_PATH=${BACKEND_INNER_PATH}/app
 
 # 数据库密码
 DB_PASSWORD=UISKEYU*&hsuFuisk
+REDIS_PASSWORD=template_redis_8965_3233 # 修改时需要同时修改./META/redis/redis.conf 1037H密码
+
+# 超级用户, 只在首次创建数据库时录入
+SUPER_USER_NAME=admin
+SUPER_USER_PASSWORD=UISYU*&djf
 
 # 外部映射路径
 BASE_OUTER_PATH=D:\WebData
 BACKEND_DATA_PATH=${BASE_OUTER_PATH}\backend
 DB_DATA_PATH=${BASE_OUTER_PATH}\db
+REDIS_DATA_PATH=${BASE_OUTER_PATH}\redis
