1.删除小程序侧代码 2.适配手机侧显示

--- a/.env_example
+++ b/.env_example
@@ -20,6 +20,7 @@ BACKEND_MEDIA_PATH=${BACKEND_INNER_PATH}/app
 
 # 数据库密码
 DB_PASSWORD=UISKEYU*&hsuFuisk
+DB_USER=db_root
 REDIS_PASSWORD=template_redis_8965_3233 # 修改时需要同时修改./META/redis/redis.conf 1037H密码
 
 # 超级用户, 只在首次创建数据库时录入
