--- a/src/clientWeb/package.json
+++ b/src/clientWeb/package.json
@@ -16,6 +16,7 @@
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.6.7",
     "element-plus": "^2.6.0",
+    "md-editor-v3": "^4.13.5",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
