--- a/.env_example
+++ b/.env_example
@@ -13,6 +13,8 @@ BACKEND_PORT=8000
 FRONT_WEB_PORT=8001
 FRONT_MB_PORT=8002
 DEV_FRONT_CODE_PORT=8003
+REDIS_PORT=6379
+BACKEND_ADDR=http://localhost:${BACKEND_PORT}
 DB_PORT=3306
 DB_NAME=mainapp
 BACKEND_INNER_PATH=/prj_data
@@ -20,16 +22,15 @@ BACKEND_LOG_PATH=${BACKEND_INNER_PATH}/logs
 BACKEND_MEDIA_PATH=${BACKEND_INNER_PATH}/app
 
 # 数据库密码
-DB_PASSWORD=UISKEYU*&hsuFuisk
-REDIS_PASSWORD=template_redis_8965_3233 # 修改时需要同时修改./META/redis/redis.conf 1037H密码
+DB_PASSWORD="your_db_password"
+REDIS_PASSWORD=your_redis_password # 修改时需要同时修改./META/redis/redis.conf 1037H密码
 
 # 超级用户, 只在首次创建数据库时录入
 SUPER_USER_NAME=admin
-SUPER_USER_PASSWORD=UISYU*&djf
+SUPER_USER_PASSWORD="your_super_user_password"
 
 # 外部映射路径
 BASE_OUTER_PATH=/mnt/e/workspace/full_stack_data
 BACKEND_DATA_PATH=${BASE_OUTER_PATH}/backend
-DB_DATA_PATH=${BASE_OUTER_PATH}/db # WSL无法使用外部文件夹存储数据，因此使用本地路径
+DB_DATA_PATH=/home/ggg/mysql_data
 REDIS_DATA_PATH=${BASE_OUTER_PATH}/redis
-HTML_ROOT=${BASE_OUTER_PATH}/html
