--- a/META/nginx/nginx_template.conf
+++ b/META/nginx/nginx_template.conf
@@ -29,7 +29,7 @@ http {
     server {
 
         # listen 443 ssl;
-        server_name www.guntherblog.top;
+        server_name $REPLACE_HOST_NAME;
 
         # ssl_certificate /ssl_pem/server.crt;
         # ssl_certificate_key /ssl_pem/server.key;
@@ -56,7 +56,7 @@ http {
     # HTTP server
     server {
         listen 80;
-        server_name www.guntherblog.top;
+        server_name $REPLACE_HOST_NAME;
 
         # Redirect all HTTP requests to HTTPS
         return 301 https://$host$request_uri;
