--- a/docker-compose_template.yaml
+++ b/docker-compose_template.yaml
@@ -67,7 +67,7 @@ services:
 #PROD      - ./META/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
 #PROD      # - ./META/nginx/hosts:/etc/hosts:ro
 #PROD      # - ./META/nginx/user_web:/user/web:ro
-#PROD      - ${SYNC_SSH_FRONT_DIR}:/www:ro
+#PROD      - ${HTML_ROOT}:/www:ro
 #PROD      # - ${IOT_DATA_PATH}/nginx:/var/log/nginx
 #PROD      # - /etc/letsencrypt/archive/manager.woozatop.com/fullchain2.pem:/ssl_pem/server.crt:ro
 #PROD      # - /etc/letsencrypt/archive/manager.woozatop.com/privkey2.pem:/ssl_pem/server.key:ro
