优化了目录树,优化基础登录接口

--- a/docker-compose_template.yaml
+++ b/docker-compose_template.yaml
@@ -12,6 +12,7 @@ services:
       - ${BACKEND_PORT}:${BACKEND_PORT}
     depends_on:
       - db
+      - redis
     command: python3 setup.py
     env_file:
       - .env
