--- a/docker-compose_template.yaml
+++ b/docker-compose_template.yaml
@@ -14,6 +14,11 @@ services:
       - db
       - redis
     command: python3 setup.py
+    healthcheck:
+      test: ['CMD', 'python3', 'HealthCheck.py' ]
+      interval: 10s
+      timeout: 5s
+      retries: 3
     env_file:
       - .env
     networks:
