1. configurable menu developing

--- a/docker-compose_template.yaml
+++ b/docker-compose_template.yaml
@@ -48,6 +48,7 @@ services:
 #DEV      context: .
 #DEV      dockerfile: ./META/frontWeb/Dockerfile
 #DEV    container_name: front_dev
+#DEV    mem_limit: 4G
 #DEV    ports:
 #DEV      - "4321:4321"
 #DEV      - "${FRONT_WEB_PORT}:${FRONT_WEB_PORT}"
