--- a/src/clientWeb/package.json
+++ b/src/clientWeb/package.json
@@ -14,10 +14,13 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "autoprefixer": "^10.4.19",
     "axios": "^1.6.7",
     "element-plus": "^2.6.0",
     "md-editor-v3": "^4.13.5",
     "pinia": "^2.1.7",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
